--- a/pom.xml
+++ b/pom.xml
@@ -159,5 +159,11 @@
             <version>2.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha2</version>
+        </dependency>
+
     </dependencies>
 </project>
